# Newegg-Crawler

./: README.md  pyproject.toml  scrapy.cfg
neweggscrape/: items.py  pipelines.py  settings.py
neweggscrape/spiders/: newegg.py  neweggamdboard.py  neweggboard.py  neweggcase.py  neweggcpu.py  newegggpu.py  newegghdd.py  neweggintelboard.py  neweggpsu.py  neweggram.py  neweggssd.py  root_spider.py  utils.py
