package-mode = false
[tool.poetry]
name = "newegg-crawler"
version = "0.1.0"
description = ""
authors = ["Jeremy <jeremy@comparebench.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.12.0"
psycopg2-binary = "^2.9.10"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
